--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCT Vessel Tracker</title>
+    <title>SCT Image</title>
     <style>
         /* General styling to make the page full height */
         body {
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url("https://github.com/SCTSupplyChainSolutions/VesselTracker/blob/main/SCT%20Logo.jpg?raw=true");
+            background-image: url("https://github.com/SCTSupplyChainSolutions/SCTLogo/blob/7687a833aa80924735420a8ff21cf3f755d47e14/SCT%20Logo.jpg");
             background-size: contain;  /* Logo will maintain aspect ratio */
             background-repeat: no-repeat;
             background-position: center;
