--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url("https://github.com/SCTSupplyChainSolutions/SCTLogo/blob/7687a833aa80924735420a8ff21cf3f755d47e14/SCT%20Logo.jpg");
+            background-image: url("https://github.com/SCTSupplyChainSolutions/SCTImage/blob/main/SCT%20Logo.jpg?raw=true" );
             background-size: contain;  /* Logo will maintain aspect ratio */
             background-repeat: no-repeat;
             background-position: center;
