--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT Image</title>
     <style>
-        /* General styling to make the page full height */
+        /* General styling to make the page full height and ensure a white background */
         body {
             margin: 0;
             padding: 0;
@@ -14,10 +14,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            background-image: url("https://raw.githubusercontent.com/SCTSupplyChainSolutions/SCTImage/b661589d6d9c675e1f0dd419f329faa67cc9a570/SCT%20Logo.jpg");
-            background-size: contain;  /* Logo will maintain aspect ratio */
-            background-repeat: no-repeat;
-            background-position: center;
+            background-color: white; /* Set background to white */
         }
 
         /* Styling for the text container */
@@ -27,7 +24,7 @@
             top: 50%;
             transform: translateY(-50%);  /* Center text vertically */
             font-family: 'Montserrat', sans-serif;
-            color: #333;
+            color: #333333;  /* Dark grey color for text */
         }
 
         /* Larger font for the first line of text */
