--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
         /* Styling for the text container */
         .text-container {
             position: absolute;
+            top: 20px; /* Align text to the top-left */
             left: 20px;
-            top: 50%;
-            transform: translateY(-50%);  /* Center text vertically */
             font-family: 'Montserrat', sans-serif;
-            color: #333333;  /* Dark grey color for text */
+            color: #777777; /* Lighter grey color for text */
         }
 
         /* Larger font for the first line of text */
@@ -70,4 +69,5 @@
     </div>
 </body>
 </html>
+
 
