--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT Image</title>
     <style>
-        /* General styling to make the page full height and ensure a white background */
+        /* General styling to make the page half height and ensure a white background */
         body {
             margin: 0;
             padding: 0;
-            height: 100vh;
+            height: 50vh; /* Set the body height to 50% of the viewport height */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,7 +23,7 @@
             top: 20px; /* Align text to the top-left */
             left: 20px;
             font-family: 'Montserrat', sans-serif;
-            color: #777777; /* Lighter grey color for text */
+            color: #999999; /* Lighter grey color for text */
         }
 
         /* Larger font for the first line of text */
@@ -52,6 +52,13 @@
             width: 100px;  /* Resize logo */
             height: auto;
         }
+
+        /* Styling for the iframe */
+        iframe {
+            width: 100%;
+            height: 100%; /* Make iframe fill the body's height */
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -67,7 +74,9 @@
              alt="SCT Logo" 
              class="logo">
     </div>
+
+    <!-- iframe (example) -->
+    <iframe src="https://www.example.com"></iframe>
 </body>
 </html>
-
 
