--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            background-color: white; /* Set background to white */
+            background-color: transparent; /* Set background to white */
         }
 
         /* Styling for the text container */
@@ -49,7 +49,7 @@
         }
 
         .logo {
-            width: 100px;  /* Resize logo */
+            width: 150px;  /* Resize logo */
             height: auto;
         }
     </style>
