--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         }
 
         .logo {
-            width: 150px;  /* Resize logo */
-            height: auto;
+            width: 125px;
+            height: 100px;
         }
     </style>
 </head>
